fix x overflow

--- a/src/global.css
+++ b/src/global.css
@@ -106,6 +106,7 @@ button {
   flex-direction: column;
   align-items: center;
   max-width: 100vw;
+  overflow-x: hidden;
 }
 .section {
   position: relative;
